<resources>
    <string name="app_name">EChards</string>
    <string name="title_activity_registration">Registration</string>
    
    
    
    <!-- BEGIN for ACTIVITY HELP -->
    <string name="title_activity_help">Справка</string>
    <string name="array_notes">C C# Db D D# Eb E F F# Gb G G# Ab A A# B H</string>
    <string name="array_forms">Major m 7 m7 5 6 m6 maj7 m(maj7) 6/9 m6/9 9 m9 add9 m(add9) 11 m11 13 ° dim dim7 Ø m7-5 m7b5 sus sus2 sus4 sus7</string>
    <string name="title_activity_help_chords">Аккорды</string>
    <string name="label_enter_text">Соберите аккорд и нажмите на кнопку:</string>
    <!-- END for ACTIVITY HELP -->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password confirm</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>


    <!-- main activity -->
    <string name="main_login">Войти</string>
    <string name="main_email">Email</string>
    <string name="main_pas">Пароль</string>
    <string name="logo">logo</string>
    <string name="autorization">Нет аккаунта?</string>
    <string name="registration_main">\tРЕГИСТРАЦИЯ</string>
    <string name="quest">Гость</string>

    <!-- menu activity -->
    <string name="help">help</string>
    <string name="songs">songs</string>
    <string name="info">info</string>
    <string name="tuner">tuner</string>
    <string name="exit">exit</string>
    <string name="registration">registration</string>


</resources>
