<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:contentDescription="@string/songs"
            android:src="@drawable/songs"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:onClick="onClickGoToBands" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:layout_weight="1"
            android:contentDescription="@string/help"
            android:src="@drawable/help"
            android:scaleType="fitCenter"
            android:background="@color/colorWhite"
            android:layout_margin="10dp"
            android:onClick="onClickGoToHelp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/info"
            android:src="@drawable/info"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            android:onClick="onClickGoToAbout" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton4"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/tuner"
            android:src="@drawable/tuner"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton5"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/exit"
            android:src="@drawable/exit"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton6"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/registration"
            android:src="@drawable/registration"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            />
    </LinearLayout>
</LinearLayout>