<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:hint="@string/main_email"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:focusable="True"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/main_pas"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:focusable="True"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="0.83"
            android:weightSum="1">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="253dp"
                android:id="@+id/imageView"
                android:background="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_login"
                android:id="@+id/buttonAvtorization"
                android:onClick="onClickLogin"
                android:nestedScrollingEnabled="true"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:background="#4d6076"
                android:alpha="0.9" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/quest"
                android:id="@+id/buttonRegistration"
                android:onClick="onClickGoToMenu"
                android:background="#313234"
                android:textColor="#ffffff"
                android:nestedScrollingEnabled="true" />
        </LinearLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/autorization"
        android:id="@+id/textView"
        android:layout_toRightOf="@+id/horizontalScrollView"
        android:layout_alignBottom="@+id/linearLayout"
        android:textColor="#ffffff"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/registration_main"
        android:id="@+id/textView2"
        android:layout_gravity="right"
        android:textColor="#0095c3"
        android:onClick="onClickGoToRegistration"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp" />

</RelativeLayout>
