<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.pi_13.echards.RegistrationActivity"
    android:background="@drawable/background_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:hint="@string/prompt_email"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:hint="@string/prompt_name"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="@string/prompt_password"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordConfirm"
            android:hint="@string/prompt_password_confirm"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Регистрация"
            android:id="@+id/buttonRegistration"
            android:onClick="onClickRegistration"
            android:nestedScrollingEnabled="true"
            android:background="#4d6076"
            android:alpha="0.9"
            android:textColor="#ffffff" />

    </LinearLayout>
</RelativeLayout>
